api для карт компании (не протестировано)
